--- a/src/style/MarkDownPreview.css
+++ b/src/style/MarkDownPreview.css
@@ -6,6 +6,7 @@
 .article h3 {
   margin-top: 25px;
   margin-bottom: 3px;
+  padding-bottom: 5px;
   border-bottom: 1px solid rgba(199, 145, 0, 0.3);
   font-size: 20px;
 }
