--- a/src/style/MarkDownPreview.css
+++ b/src/style/MarkDownPreview.css
@@ -1,39 +1,53 @@
 .article {
-  font-size: 16px;
-  line-height: 26px;
+  font-size: 1rem;
+  line-height: 1.5;
+  margin: 0;
 }
 
 .article h3 {
-  margin-top: 25px;
-  margin-bottom: 3px;
-  padding-bottom: 5px;
-  border-bottom: 1px solid rgba(199, 145, 0, 0.3);
-  font-size: 20px;
+  margin-top: 0;
+  margin-bottom: 0.35em;
+  font-size: 1.5rem;
 }
 .article h4 {
-  margin-top: 20px;
-  margin-bottom: 3px;
-  font-size: 19.2px;
+  margin-top: 0;
+  margin-bottom: 0.35em;
+  font-size: 1.25rem;
 }
 .article h5 {
-  margin-top: 15px;
-  margin-bottom: 3px;
-  font-size: 18px;
+  margin-top: 0;
+  margin-bottom: 0.35em;
+  font-size: 1.1rem;
 }
 
 .article a {
   color: #c79100;
 }
 
-ul {
+.article ul {
   padding-left: 20px;
-  margin-top: 3px;
-  margin-bottom: 3px;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
 }
-p {
+.article li > ul {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+}
+.article li {
+  display: list-item;
+  margin-top: 8px;
+}
+.article p {
   white-space:pre-wrap;
-  margin: 10px 0px;
+  line-height: 24px;
+  margin-top: 0;
+  margin-bottom: 16px;
 }
+
 img {
   max-width: 100%;
 }
@@ -70,12 +84,14 @@ th, td {
 /* toc */
 .toc {
   font-size: 14px;
-  position:sticky;
-  top:40px;
 }
 .toc ul {
-  padding-left: 10px;
+  margin: 0;
+  padding-left: 16px;
   list-style-type: none;
+}
+.toc li > ul {
+  padding-left: 10px;
 }
 .toc a{
   color: #666;
