--- a/src/style/MarkDownPreview.css
+++ b/src/style/MarkDownPreview.css
@@ -1,46 +1,7 @@
-.article {
-  font-size: 1rem;
-  line-height: 1.5;
-  margin: 0;
-}
-
-.article h3 {
-  margin-top: 0;
-  margin-bottom: 0.35em;
-  font-size: 1.5rem;
-}
-.article h4 {
-  margin-top: 0;
-  margin-bottom: 0.35em;
-  font-size: 1.25rem;
-}
-.article h5 {
-  margin-top: 0;
-  margin-bottom: 0.35em;
-  font-size: 1.1rem;
-}
-
 .article a {
   color: #c79100;
 }
 
-.article ul {
-  padding-left: 20px;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-}
-.article li > ul {
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-}
-.article li {
-  display: list-item;
-  margin-top: 8px;
-}
 .article p {
   white-space:pre-wrap;
   line-height: 24px;
@@ -66,7 +27,6 @@ code {
   padding: 2px;
 }
 
-
 /* table */
 table {
   border-spacing: 0px;
@@ -82,23 +42,23 @@ th, td {
 }
 
 /* toc */
-.toc {
-  font-size: 14px;
-}
-.toc ul {
+ul.toc-ul {
   margin: 0;
+  padding-top: 0;
+  padding-bottom: 0;
   padding-left: 16px;
   list-style-type: none;
 }
-.toc li > ul {
+li > ul.toc-ul {
   padding-left: 10px;
 }
-.toc a{
+a.toc-link {
+  font-size: 14px;
   color: #666;
   text-decoration: none;
   display: block;
   padding: 3px;
 }
-.toc a:hover {
+a:hover.toc-link {
   background-color: #ddd;
 }
